# YARW

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build-and-test.yml
docs/: EXAMPLES.md  USAGE.md
src/: cli.rs  error.rs  main.rs  options.rs
src/algorithm/: bwlimit.rs  checksum.rs  compress.rs  delta.rs  generator.rs  mod.rs  parallel_checksum.rs  receiver.rs  sender.rs
src/filesystem/: buffer_optimizer.rs  file_info.rs  files_from.rs  mod.rs  path_utils.rs  scanner.rs  symlinks.rs  windows_scanner.rs
src/filter/: engine.rs  mod.rs  pattern.rs
src/output/: itemize.rs  logger.rs  mod.rs  progress.rs  stats.rs  verbose.rs
src/protocol/: async_stream.rs  file_list.rs  message.rs  mod.rs  multiplex.rs  multiplex_io.rs  rsync_exclude.rs  rsync_flist.rs  rsync_protocol.rs  stream.rs  version.rs
src/transport/: daemon.rs  daemon_client.rs  daemon_config.rs  local.rs  mod.rs  remote.rs  ssh.rs  ssh_command.rs
