[package]
name = "yarw"
version = "0.1.0"
edition = "2021"

[dependencies]
# コマンドライン引数
clap = { version = "4", features = ["derive", "cargo"] }

# ファイルシステム
walkdir = "2"
path-absolutize = "3"
dunce = "1"

# チェックサム・暗号化
md-5 = "0.10"
md4 = "0.10"
blake2 = "0.10"
sha2 = "0.10"
digest = "0.10"
byteorder = "1"

# 圧縮
flate2 = "1"
zstd = "0.13"
lz4 = "1"
lz4_flex = "0.11"

# パターンマッチング
globset = "0.4"
regex = "1"

# SSH接続
ssh2 = "0.9"

# 並列処理
rayon = "1"

# プログレスバー
indicatif = "0.17"

# エラーハンドリング
anyhow = "1"
thiserror = "1"

# 非同期I/O（デーモンモード用）
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }

# シリアライゼーション（設定ファイル用）
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# ログ
log = "0.4"
env_logger = "0.11"
chrono = "0.4"

# 一時ファイル
tempfile = "3"
whoami = "1.6.1"
dirs = "5"

# Windows API
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
