[package]
name = "yarw"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "cargo"] }
walkdir = "2"
path-absolutize = "3"
dunce = "1"
md-5 = "0.10"
md4 = "0.10"
blake2 = "0.10"
sha2 = "0.10"
digest = "0.10"
byteorder = "1"
flate2 = "1"
zstd = "0.13"
lz4 = "1"
lz4_flex = "0.11"
globset = "0.4"
regex = "1"
ssh2 = "0.9"
rayon = "1"
indicatif = "0.17"
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
tempfile = "3"
whoami = "1.6.1"
dirs = "5"
rpassword = "7"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
